--- a/style.css
+++ b/style.css
@@ -2,10 +2,20 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  height: 200px;
-  width: 400px;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: blue;
+  height: 30%;
+  width: 30%;
+  background-color: #7f8c8d;
+}
+
+.fixedright{
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 70%;
+  width: 30%;
+  background-color: #7f8c8d;
+}
+
+#flux{
+	width: 70%;
 }
