--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 .panel {
 	display: none;
 }
+#enclosure {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+}
+img[name="img"] {
+	border: 1px solid black;
+}
